--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css"> 
         <link rel="stylesheet" type="text/css" href="css/styles.css">    
   </head>
+  <div></div>
   <body>
     <script src="js/scripts.js"></script>
   </body>
