--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
         <link rel="stylesheet" type="text/css" href="css/styles.css"> 
         <link rel="stylesheet" type="text/css" href="css/styles.css">    
   </head>
-  <div></div>
+  
   <body>
-    <script src="js/scripts.js"></script>
+    <div class="app-container">
+    <h1><i>the</i> POKEMON app:</h1>
+    <ul class="pokemon-list"></ul>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
