--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio Data App</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-        <link rel="stylesheet" type="text/css" href="css/styles.css"> 
-        <link rel="stylesheet" type="text/css" href="css/styles.css">    
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
-  
   <body>
     <div class="app-container">
     <h1><i>the</i> POKEMON app:</h1>
     <ul class="pokemon-list"></ul>
     </div>
-    <script src="script.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
