added link to external API

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Pokemon Data app</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -11,6 +11,8 @@
     <h1><i>the</i> POKEMON app:</h1>
     <ul class="pokemon-list"></ul>
     </div>
+    <!--<script src="js/promise-polyfill.js"></script> -->
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
