--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="app-container">
-    <h1><i>the</i> POKEMON app:</h1>
+    <h1><i>the</i>Pokédex</h1>
     <ul class="pokemon-list"></ul>
     </div>
-    <!--<script src="js/promise-polyfill.js"></script> -->
+    <script src="js/promise-polyfill.js"></script> 
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
   </body>
