different color scheme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="app-container">
-    <h1><i>the</i>Pokédex</h1>
+    <h1><i>Poké</i>dex</h1>
     <ul class="pokemon-list"></ul>
     </div>
     <script src="js/promise-polyfill.js"></script> 
