--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
   </head>
   <body>
     <div class="app-container">
-    <h1><i>Poké</i>dex</h1>
-    <ul class="pokemon-list"></ul>
+      
+      <h1><i>Poké</i>dex</h1>
+      <ul class="pokemon-list"></ul>
+      
+      <!-- modal -->
+      <!-- <button id="show-modal"></button> -->
+      <div id="modal-container">
+        <!-- <div class="modal">
+          <button class="modal-close">Close</button>
+          <h1>POKEMON Name</h1>
+          <p class="poke-height">Pokemon height</p>  
+          <p class="poke-types"> Pokemon Types</p> 
+          <div id="img-container"></div>
+        </div> -->
+      </div> 
+
     </div>
+
     <script src="js/promise-polyfill.js"></script> 
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
